testcases/semantic/valid/rename.rs
fn aa() -> i32 {
    2
}
fn main() {
    let a: i32 = 1;
    let a: u32 = 2;
    let b: i32 = aa();
}
