testcases/semantic/invalid/rename.rs
fn a() -> i32 {
    2
}
fn main() {
    let a = c"foo #\"# bar";
    let a = r"addda";
    let b = a();
}
